fix bug in IE (horizontal scroll bar)

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @font-face {
     font-family:"Circe";
     src:
@@ -134,12 +135,12 @@ body {
     max-width: 1440px;
     min-width: 320px;
     top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    right: 50%;
+    -webkit-transform: translate(50%, -50%);
+    -moz-transform: translate(50%, -50%);
+    -ms-transform: translate(50%, -50%);
+    -o-transform: translate(50%, -50%);
+    transform: translate(50%, -50%);
     box-sizing: border-box;
     background: url('img/project-title.png') no-repeat 39% 0;
 }
@@ -248,6 +249,7 @@ body {
     box-sizing: border-box;
 }
 
+/*
 .section-link-list > li.active > a {
     color: rgb(2, 74, 156);
     border-color: rgb(2, 74, 156);
@@ -256,6 +258,12 @@ body {
 .section-link-list > li:hover:not(.active) > a {
     color: rgba(255, 204, 0, 0.6);
     border-color: rgba(255, 204, 0, 0.6);
+}
+*/
+
+.section-link-list > li:hover > a {
+    color: rgb(2, 74, 156);
+    border-color: rgb(2, 74, 156);
 }
 
 
